--- a/PRUEBA (Usuario)/Makefile.win
+++ b/PRUEBA (Usuario)/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = main.o classes/sources/Reserva.o collections/ColResrevas.o collections/List.o collections/ListIterator.o collections/ListNode.o collections/OrderedDictionary.o collections/OrderedDictionaryEntry.o collections/ReservaIterator.o interfaces/ICollectible.o interfaces/ICollection.o interfaces/IDictionary.o interfaces/IIterator.o interfaces/IKey.o interfaces/OrderedKey.o classes/sources/Usuario.o collections/ColUsuario.o
-LINKOBJ  = main.o classes/sources/Reserva.o collections/ColResrevas.o collections/List.o collections/ListIterator.o collections/ListNode.o collections/OrderedDictionary.o collections/OrderedDictionaryEntry.o collections/ReservaIterator.o interfaces/ICollectible.o interfaces/ICollection.o interfaces/IDictionary.o interfaces/IIterator.o interfaces/IKey.o interfaces/OrderedKey.o classes/sources/Usuario.o collections/ColUsuario.o
+OBJ      = main.o classes/sources/Reserva.o collections/ColResrevas.o collections/List.o collections/ListIterator.o collections/ListNode.o collections/OrderedDictionary.o collections/OrderedDictionaryEntry.o collections/ReservaIterator.o interfaces/ICollectible.o interfaces/ICollection.o interfaces/IDictionary.o interfaces/IIterator.o interfaces/IKey.o interfaces/OrderedKey.o classes/sources/Usuario.o collections/ColUsuario.o collections/UsuarioIterator.o
+LINKOBJ  = main.o classes/sources/Reserva.o collections/ColResrevas.o collections/List.o collections/ListIterator.o collections/ListNode.o collections/OrderedDictionary.o collections/OrderedDictionaryEntry.o collections/ReservaIterator.o interfaces/ICollectible.o interfaces/ICollection.o interfaces/IDictionary.o interfaces/IIterator.o interfaces/IKey.o interfaces/OrderedKey.o classes/sources/Usuario.o collections/ColUsuario.o collections/UsuarioIterator.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
@@ -74,3 +74,6 @@ classes/sources/Usuario.o: classes/sources/Usuario.cpp
 
 collections/ColUsuario.o: collections/ColUsuario.cpp
 	$(CPP) -c collections/ColUsuario.cpp -o collections/ColUsuario.o $(CXXFLAGS)
+
+collections/UsuarioIterator.o: collections/UsuarioIterator.cpp
+	$(CPP) -c collections/UsuarioIterator.cpp -o collections/UsuarioIterator.o $(CXXFLAGS)
